@@ -18,7 +18,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)glob.c	1.4 (gritter) 8/13/05
+ * Sccsid @(#)glob.c	1.5 (gritter) 8/30/05
  */
 
 #include "e.h"
@@ -28,7 +28,7 @@ int	lp[80];	/* stack for things like piles and matrices */
 int	ct;	/* pointer to lp */
 int	used[100];	/* available registers */
 int	ps;	/* default init point size */
-int	resolution = 720;	/* resolution of ditroff */
+int	resolution = 7200;	/* resolution of ditroff */
 int	deltaps	= 3;	/* default change in ps */
 int	gsize	= 10;	/* default initial point size */
 int	gfont	= ITAL;	/* italic */
